1st successful clean

--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2cffa2b5",
    "metadata": {},
    "outputs": [
@@ -162,28 +162,15 @@
       "============================================================\n",
       "\n",
       "Processing transfer_portal_2021...\n",
-      "  Imputed 572 out of 958 player ratings\n",
+      "  Imputed 639 out of 1051 player ratings\n",
       "Processing transfer_portal_2022...\n",
-      "  Imputed 372 out of 1225 player ratings\n",
+      "  Imputed 410 out of 1364 player ratings\n",
       "Processing transfer_portal_2023...\n",
-      "  Imputed 627 out of 1413 player ratings\n",
+      "  Imputed 698 out of 1603 player ratings\n",
       "Processing transfer_portal_2024...\n",
-      "  Imputed 569 out of 2340 player ratings\n",
+      "  Imputed 641 out of 2646 player ratings\n",
       "Processing transfer_portal_2025...\n",
-      "  Imputed 744 out of 3296 player ratings\n",
-      "\n",
-      "============================================================\n",
-      "NORMALIZING RATINGS\n",
-      "============================================================\n",
-      "\n",
-      "Original rating range: 0.0000 to 1.0000\n",
-      "transfer_portal_2021: Normalized 858 ratings\n",
-      "transfer_portal_2022: Normalized 1109 ratings\n",
-      "transfer_portal_2023: Normalized 1379 ratings\n",
-      "transfer_portal_2024: Normalized 2143 ratings\n",
-      "transfer_portal_2025: Normalized 2852 ratings\n",
-      "\n",
-      "New rating range: 0.0000 to 1.0000\n",
+      "  Imputed 834 out of 3751 player ratings\n",
       "\n",
       "============================================================\n",
       "SAVING CLEANED GRAPHS\n",
@@ -191,23 +178,23 @@
       "\n",
       "Saved: C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\cleaned\\transfer_portal_2021_cleaned.graphml\n",
       "  Nodes: 264\n",
-      "  Edges: 958\n",
+      "  Edges: 1051\n",
       "\n",
       "Saved: C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\cleaned\\transfer_portal_2022_cleaned.graphml\n",
       "  Nodes: 282\n",
-      "  Edges: 1225\n",
+      "  Edges: 1364\n",
       "\n",
       "Saved: C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\cleaned\\transfer_portal_2023_cleaned.graphml\n",
       "  Nodes: 283\n",
-      "  Edges: 1413\n",
+      "  Edges: 1603\n",
       "\n",
       "Saved: C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\cleaned\\transfer_portal_2024_cleaned.graphml\n",
       "  Nodes: 352\n",
-      "  Edges: 2340\n",
+      "  Edges: 2646\n",
       "\n",
       "Saved: C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\cleaned\\transfer_portal_2025_cleaned.graphml\n",
       "  Nodes: 410\n",
-      "  Edges: 3296\n",
+      "  Edges: 3751\n",
       "\n",
       "✓ All graphs cleaned and saved!\n",
       "============================================================\n",
@@ -215,11 +202,11 @@
       "============================================================\n",
       "\n",
       "               Graph  Original Edges  Cleaned Edges  Change  Percent Increase\n",
-      "transfer_portal_2021             958            958       0               0.0\n",
-      "transfer_portal_2022            1225           1225       0               0.0\n",
-      "transfer_portal_2023            1413           1413       0               0.0\n",
-      "transfer_portal_2024            2340           2340       0               0.0\n",
-      "transfer_portal_2025            3296           3296       0               0.0\n",
+      "transfer_portal_2021             958           1051      93          9.707724\n",
+      "transfer_portal_2022            1225           1364     139         11.346939\n",
+      "transfer_portal_2023            1413           1603     190         13.446568\n",
+      "transfer_portal_2024            2340           2646     306         13.076923\n",
+      "transfer_portal_2025            3296           3751     455         13.804612\n",
       "\n",
       "============================================================\n",
       "STAR-TO-RATING MAPPING TABLE\n",
@@ -238,8 +225,6 @@
     }
    ],
    "source": [
-    "# cleaning xfer\n",
-    "\n",
     "import networkx as nx\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -398,8 +383,8 @@
     "for name, graph in xferfiles.items():\n",
     "    print(f\"Processing {name}...\")\n",
     "    \n",
-    "    # Create new graph\n",
-    "    G_new = nx.DiGraph()\n",
+    "    # Create new MULTI-graph to support multiple edges between same nodes\n",
+    "    G_new = nx.MultiDiGraph()\n",
     "    \n",
     "    # Copy node attributes\n",
     "    for node, attrs in graph.nodes(data=True):\n",
@@ -474,6 +459,7 @@
     "                })\n",
     "        \n",
     "        # Create one edge per unique player\n",
+    "        # KEY FIX: Use MultiDiGraph or unique edge keys\n",
     "        for player_name, player_data_list in player_groups.items():\n",
     "            # For duplicate entries, take the first non-empty value for each attribute\n",
     "            def get_best_value(attr_name):\n",
@@ -493,12 +479,13 @@
     "                'weight': 1\n",
     "            }\n",
     "            \n",
+    "            # Add edge (MultiDiGraph automatically handles multiple edges)\n",
     "            G_new.add_edge(source, target, **final_data)\n",
     "            edges_after += 1\n",
     "    \n",
     "    print(f\"  Edges: {edges_before} → {edges_after} (+{edges_after - edges_before})\")\n",
     "    print(f\"  Players processed: {players_processed}\")\n",
-    "    print(f\"  Duplicates merged: {duplicates_merged}\")\n",
+    "    print(f\"  Duplicates merged: {duplicates_merged}\") \n",
     "    print()\n",
     "    \n",
     "    cleaned_graphs[name] = G_new\n",
@@ -532,54 +519,7 @@
     "    print(f\"  Imputed {imputed_count} out of {total_players} player ratings\")\n",
     "\n",
     "# ============================================\n",
-    "# STEP 5: MIN-MAX NORMALIZE RATINGS\n",
-    "# ============================================\n",
-    "\n",
-    "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"NORMALIZING RATINGS\")\n",
-    "print(\"=\"*60 + \"\\n\")\n",
-    "\n",
-    "# First, collect all ratings to find global min and max\n",
-    "all_ratings = []\n",
-    "for name, graph in cleaned_graphs.items():\n",
-    "    for s, t, data in graph.edges(data=True):\n",
-    "        rating_str = data.get('ratings', '')\n",
-    "        if rating_str and rating_str != '' and rating_str != 'None':\n",
-    "            try:\n",
-    "                rating = float(rating_str)\n",
-    "                all_ratings.append(rating)\n",
-    "            except ValueError:\n",
-    "                pass\n",
-    "\n",
-    "if all_ratings:\n",
-    "    global_min = np.min(all_ratings)\n",
-    "    global_max = np.max(all_ratings)\n",
-    "    \n",
-    "    print(f\"Original rating range: {global_min:.4f} to {global_max:.4f}\")\n",
-    "    \n",
-    "    # Normalize to [0, 1]\n",
-    "    for name, graph in cleaned_graphs.items():\n",
-    "        normalized_count = 0\n",
-    "        for s, t, data in graph.edges(data=True):\n",
-    "            rating_str = data.get('ratings', '')\n",
-    "            if rating_str and rating_str != '' and rating_str != 'None':\n",
-    "                try:\n",
-    "                    rating = float(rating_str)\n",
-    "                    # Min-max normalization\n",
-    "                    if global_max > global_min:\n",
-    "                        normalized = (rating - global_min) / (global_max - global_min)\n",
-    "                        data['ratings'] = str(round(normalized, 2))\n",
-    "                        normalized_count += 1\n",
-    "                except ValueError:\n",
-    "                    pass\n",
-    "        print(f\"{name}: Normalized {normalized_count} ratings\")\n",
-    "    \n",
-    "    print(f\"\\nNew rating range: 0.0000 to 1.0000\")\n",
-    "else:\n",
-    "    print(\"Warning: No valid ratings found to normalize!\")\n",
-    "\n",
-    "# ============================================\n",
-    "# STEP 6: SAVE CLEANED GRAPHS\n",
+    "# STEP 5: SAVE CLEANED GRAPHS\n",
     "# ============================================\n",
     "\n",
     "print(\"\\n\" + \"=\"*60)\n",
@@ -600,7 +540,7 @@
     "print(\"✓ All graphs cleaned and saved!\")\n",
     "\n",
     "# ============================================\n",
-    "# STEP 7: SUMMARY STATISTICS\n",
+    "# STEP 6: SUMMARY STATISTICS\n",
     "# ============================================\n",
     "\n",
     "print(\"=\"*60)\n",
@@ -627,7 +567,7 @@
     "print(summary_df.to_string(index=False))\n",
     "\n",
     "# ============================================\n",
-    "# STEP 8: EXPORT MAPPING TABLE\n",
+    "# STEP 7: EXPORT MAPPING TABLE\n",
     "# ============================================\n",
     "\n",
     "print(\"\\n\" + \"=\"*60)\n",
@@ -657,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "6e380ec3",
    "metadata": {},
    "outputs": [
@@ -700,11 +640,11 @@
       "\n",
       "Missing Edge Attributes Summary:\n",
       "  ratings:\n",
-      "    Missing in 100/958 edges (10.4%)\n",
-      "    Sample edges: [('Missouri Western State', 'Kansas'), ('Kansas', 'Butler C.C.'), ('Kansas', 'Kansas State'), ('Kansas', 'UTSA'), ('South Carolina', 'Virginia Tech')]\n",
+      "    Missing in 104/1051 edges (9.9%)\n",
+      "    Sample edges: [('Missouri Western State', 'Kansas'), ('Kansas', 'Butler C.C.'), ('Kansas', 'Kansas State'), ('Kansas', 'UTSA'), ('Florida State', 'Troy')]\n",
       "  stars:\n",
-      "    Missing in 100/958 edges (10.4%)\n",
-      "    Sample edges: [('Missouri Western State', 'Kansas'), ('Kansas', 'Butler C.C.'), ('Kansas', 'Kansas State'), ('Kansas', 'UTSA'), ('South Carolina', 'Virginia Tech')]\n",
+      "    Missing in 104/1051 edges (9.9%)\n",
+      "    Sample edges: [('Missouri Western State', 'Kansas'), ('Kansas', 'Butler C.C.'), ('Kansas', 'Kansas State'), ('Kansas', 'UTSA'), ('Florida State', 'Troy')]\n",
       "\n",
       "\n",
       "============================================================\n",
@@ -737,10 +677,10 @@
       "\n",
       "Missing Edge Attributes Summary:\n",
       "  ratings:\n",
-      "    Missing in 116/1225 edges (9.5%)\n",
+      "    Missing in 123/1364 edges (9.0%)\n",
       "    Sample edges: [('East Carolina', 'Winston-Salem State'), ('East Carolina', 'Alabama A&M'), ('Tennessee State', 'Troy'), ('Dartmouth', 'New Mexico State'), ('Simon Fraser', 'Washington State')]\n",
       "  stars:\n",
-      "    Missing in 116/1225 edges (9.5%)\n",
+      "    Missing in 123/1364 edges (9.0%)\n",
       "    Sample edges: [('East Carolina', 'Winston-Salem State'), ('East Carolina', 'Alabama A&M'), ('Tennessee State', 'Troy'), ('Dartmouth', 'New Mexico State'), ('Simon Fraser', 'Washington State')]\n",
       "\n",
       "\n",
@@ -774,11 +714,11 @@
       "\n",
       "Missing Edge Attributes Summary:\n",
       "  ratings:\n",
-      "    Missing in 34/1413 edges (2.4%)\n",
-      "    Sample edges: [('Air Force', 'Palomar College'), ('UNLV', 'Cerritos College'), ('Houston', 'Southern Miss'), ('New Mexico State', 'Arizona State'), ('Stony Brook', 'Massachusetts')]\n",
+      "    Missing in 39/1603 edges (2.4%)\n",
+      "    Sample edges: [('Air Force', 'Palomar College'), ('UNLV', 'Cerritos College'), ('California', 'Nevada'), ('California', 'Arizona State'), ('Houston', 'Southern Miss')]\n",
       "  stars:\n",
-      "    Missing in 34/1413 edges (2.4%)\n",
-      "    Sample edges: [('Air Force', 'Palomar College'), ('UNLV', 'Cerritos College'), ('Houston', 'Southern Miss'), ('New Mexico State', 'Arizona State'), ('Stony Brook', 'Massachusetts')]\n",
+      "    Missing in 39/1603 edges (2.4%)\n",
+      "    Sample edges: [('Air Force', 'Palomar College'), ('UNLV', 'Cerritos College'), ('California', 'Nevada'), ('California', 'Arizona State'), ('Houston', 'Southern Miss')]\n",
       "\n",
       "\n",
       "============================================================\n",
@@ -811,11 +751,11 @@
       "\n",
       "Missing Edge Attributes Summary:\n",
       "  ratings:\n",
-      "    Missing in 197/2340 edges (8.4%)\n",
-      "    Sample edges: [('Arkansas', 'Missouri State'), ('Arkansas', 'North Texas'), ('Arkansas', 'McNeese'), ('Tennessee', 'Tennessee State'), ('Colorado State', 'Northern Colorado')]\n",
+      "    Missing in 213/2646 edges (8.0%)\n",
+      "    Sample edges: [('Georgia', 'Jacksonville State'), ('Washington State', 'Nevada'), ('Arkansas', 'Missouri State'), ('Arkansas', 'North Texas'), ('Arkansas', 'McNeese')]\n",
       "  stars:\n",
-      "    Missing in 197/2340 edges (8.4%)\n",
-      "    Sample edges: [('Arkansas', 'Missouri State'), ('Arkansas', 'North Texas'), ('Arkansas', 'McNeese'), ('Tennessee', 'Tennessee State'), ('Colorado State', 'Northern Colorado')]\n",
+      "    Missing in 213/2646 edges (8.0%)\n",
+      "    Sample edges: [('Georgia', 'Jacksonville State'), ('Washington State', 'Nevada'), ('Arkansas', 'Missouri State'), ('Arkansas', 'North Texas'), ('Arkansas', 'McNeese')]\n",
       "\n",
       "\n",
       "============================================================\n",
@@ -848,11 +788,11 @@
       "\n",
       "Missing Edge Attributes Summary:\n",
       "  ratings:\n",
-      "    Missing in 444/3296 edges (13.5%)\n",
-      "    Sample edges: [('Richmond', 'East Carolina'), ('East Carolina', 'Chattanooga'), ('East Carolina', 'Harding University'), ('East Carolina', 'App State'), ('East Carolina', 'Carson-Newman College')]\n",
+      "    Missing in 480/3751 edges (12.8%)\n",
+      "    Sample edges: [('Richmond', 'East Carolina'), ('Richmond', 'James Madison'), ('East Carolina', 'Chattanooga'), ('East Carolina', 'Harding University'), ('East Carolina', 'App State')]\n",
       "  stars:\n",
-      "    Missing in 444/3296 edges (13.5%)\n",
-      "    Sample edges: [('Richmond', 'East Carolina'), ('East Carolina', 'Chattanooga'), ('East Carolina', 'Harding University'), ('East Carolina', 'App State'), ('East Carolina', 'Carson-Newman College')]\n",
+      "    Missing in 480/3751 edges (12.8%)\n",
+      "    Sample edges: [('Richmond', 'East Carolina'), ('Richmond', 'James Madison'), ('East Carolina', 'Chattanooga'), ('East Carolina', 'Harding University'), ('East Carolina', 'App State')]\n",
       "\n",
       "\n",
       "\n",
