checkpoint before reworking rec pull

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -22,6 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# setup\n",
+    "\n",
     "xferpath = Path(r\"C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\cleaned\")\n",
     "recpath = Path(r\"C:\\Users\\User\\Documents\\cfb project\\data\\recruiting\\final\")\n",
     "xferfiles = {}\n",
@@ -42,7 +44,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "f3e388de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# net degree (xfer)\n",
+    "\n",
+    "import networkx as nx\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Load cleaned transfer portal data\n",
+    "xferpath = Path(r\"C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\cleaned\")\n",
+    "xferfiles = {}\n",
+    "\n",
+    "for file_path in xferpath.glob('*_cleaned.graphml'):\n",
+    "    name = file_path.stem.replace('_cleaned', '')\n",
+    "    G = nx.read_graphml(file_path)\n",
+    "    xferfiles[name] = G\n",
+    "\n",
+    "print(f\"Loaded {len(xferfiles)} transfer portal files\\n\")\n",
+    "\n",
+    "# Calculate net degree for each team in each season\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "55d5f20b",
    "metadata": {},
    "outputs": [
@@ -167,6 +198,8 @@
     }
    ],
    "source": [
+    "# npv calculation with uncertainty bounds (xfer)\n",
+    "\n",
     "import networkx as nx\n",
     "import pandas as pd\n",
     "import numpy as np\n",
