tried to add ids to xfer portal before discovering that ids are not included in endpoint

--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "a2204bf6",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "dc7d977e",
    "metadata": {},
    "outputs": [],
@@ -90,104 +90,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db80aba2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convert to graphml\n",
-    "\n",
-    "data_by_year = {\n",
-    "    2025: api_response_2025,\n",
-    "    2024: api_response_2024,\n",
-    "    2023: api_response_2023,\n",
-    "    2022: api_response_2022,\n",
-    "    2021: api_response_2021\n",
-    "}\n",
-    "\n",
-    "node_attr_map = node_attributes_by_year\n",
-    "\n",
-    "default_attrs = {\n",
-    "    'classification': 'Unknown',\n",
-    "    'conference': 'Unknown',\n",
-    "    'latitude': 0.0,\n",
-    "    'longitude': 0.0\n",
-    "}\n",
-    "\n",
-    "# Add nodes and edges to the graph G based on data\n",
-    "# Nodes: school names (origin and destination)\n",
-    "# Edges: a directed edge origin -> destination per player; edge attributes aggregate players\n",
-    "for year, data in data_by_year.items():\n",
-    "    G = nx.DiGraph()\n",
-    "    print(f\"Processing data for {year}...\")\n",
-    "    for t in data:\n",
-    "        origin = t.origin.strip() if getattr(t, 'origin', None) else None\n",
-    "        dest = t.destination.strip() if getattr(t, 'destination', None) else None\n",
-    "\n",
-    "        # add nodes if present\n",
-    "        if origin:\n",
-    "            G.add_node(origin)\n",
-    "        if dest:\n",
-    "            G.add_node(dest)\n",
-    "\n",
-    "        # only create edges when both origin and destination exist\n",
-    "        if origin and dest:\n",
-    "            player = f\"{getattr(t, 'first_name', '')} {getattr(t, 'last_name', '')}\".strip()\n",
-    "            pos = getattr(t, 'position', None)\n",
-    "            date = getattr(t, 'transfer_date', None)\n",
-    "            date_iso = date.isoformat() if date is not None else None\n",
-    "            rating = getattr(t, 'rating', None)\n",
-    "            stars = getattr(t, 'stars', None)\n",
-    "            eligibility = getattr(t, 'eligibility', None)\n",
-    "\n",
-    "            if G.has_edge(origin, dest):\n",
-    "                edge = G[origin][dest]\n",
-    "                edge.setdefault('players', []).append(player)\n",
-    "                edge.setdefault('positions', []).append(pos)\n",
-    "                edge.setdefault('dates', []).append(date_iso)\n",
-    "                edge.setdefault('ratings', []).append(rating)\n",
-    "                edge.setdefault('stars', []).append(stars)\n",
-    "                edge.setdefault('eligibility', []).append(str(eligibility))\n",
-    "                edge['weight'] = edge.get('weight', 1) + 1\n",
-    "            else:\n",
-    "                G.add_edge(origin, dest, players=[player], positions=[pos], dates=[date_iso], ratings=[rating], stars=[stars], eligibility=[str(eligibility)], weight=1)\n",
-    "\n",
-    "\n",
-    "    # Serialize any list-valued (or None) edge attributes to strings for GraphML compatibility\n",
-    "    for u, v, attrs in G.edges(data=True):\n",
-    "        for k in list(attrs.keys()):\n",
-    "            val = attrs[k]\n",
-    "            if isinstance(val, list):\n",
-    "                # join list elements into a single string; convert None -> empty string\n",
-    "                attrs[k] = ' | '.join(['' if x is None else str(x) for x in val])\n",
-    "            elif val is None:\n",
-    "                attrs[k] = ''\n",
-    "\n",
-    "    #Get the map of attributes for the specific year\n",
-    "    current_year_node_attrs = node_attr_map.get(year, {})\n",
-    "\n",
-    "    # Create the final mapping, applying defaults to any node not in the map\n",
-    "    final_attrs_for_graph = {\n",
-    "        node: current_year_node_attrs.get(node, default_attrs) for node in G.nodes()\n",
-    "    }\n",
-    "\n",
-    "    # Set all attributes at once. \n",
-    "    # NetworkX unpacks the inner dictionaries automatically.\n",
-    "    nx.set_node_attributes(G, final_attrs_for_graph)\n",
-    "\n",
-    "    filename = f\"transfer_portal_{year}.graphml\"\n",
-    "\n",
-    "    # write graphml\n",
-    "    nx.write_graphml(G, filename)\n",
-    "    print(f\"Wrote {len(G.nodes())} nodes and {len(G.edges())} edges to {filename}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f77080f6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# redoing rec data pt 1\n",
+    "\n",
     "# ============================================\n",
     "# PART 1: RECRUITING GRAPHS WITH SCHOOL ATTRIBUTES\n",
     "# ============================================\n",
@@ -320,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a5f9cdee",
    "metadata": {},
    "outputs": [
@@ -518,7 +426,7 @@
     }
    ],
    "source": [
-    "# redoing recruit data\n",
+    "# redoing rec data pt 2\n",
     "\n",
     "import cfbd\n",
     "import pandas as pd\n",
@@ -724,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "f5e2d482",
    "metadata": {},
    "outputs": [
@@ -734,12 +642,14 @@
        "UserInfo(patron_level=0, remaining_calls=770)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# num remaining calls\n",
+    "\n",
     "with cfbd.ApiClient(configuration) as api_client:\n",
     "    info = cfbd.InfoApi(api_client)\n",
     "\n",
