--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -461,7 +461,6 @@
     "                })\n",
     "        \n",
     "        # Create one edge per unique player\n",
-    "        # KEY FIX: Use MultiDiGraph or unique edge keys\n",
     "        for player_name, player_data_list in player_groups.items():\n",
     "            # For duplicate entries, take the first non-empty value for each attribute\n",
     "            def get_best_value(attr_name):\n",
@@ -588,13 +587,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "eb7e1978",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching transfer portal data for 2021...\n",
+      "Fetching transfer portal data for 2022...\n",
+      "Fetching transfer portal data for 2023...\n",
+      "Fetching transfer portal data for 2024...\n",
+      "Fetching transfer portal data for 2025...\n",
+      "Saved graph with IDs: C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\with_ids\\transfer_portal_2021_cleaned.graphml\n",
+      "Saved graph with IDs: C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\with_ids\\transfer_portal_2022_cleaned.graphml\n",
+      "Saved graph with IDs: C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\with_ids\\transfer_portal_2023_cleaned.graphml\n",
+      "Saved graph with IDs: C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\with_ids\\transfer_portal_2024_cleaned.graphml\n",
+      "Saved graph with IDs: C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\with_ids\\transfer_portal_2025_cleaned.graphml\n"
+     ]
+    }
+   ],
    "source": [
-    "# cleaning rec\n",
-    "\n"
+    "# xfer: adding id attributes to edges\n",
+    "\n",
+    "import networkx as nx\n",
+    "from pathlib import Path\n",
+    "import cfbd\n",
+    "from cfbd.rest import ApiException\n",
+    "from config import API_KEY\n",
+    "\n",
+    "xferpath_c = Path(r\"C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\cleaned\")\n",
+    "xferfiles_c = {}\n",
+    "\n",
+    "for file_path in xferpath_c.glob('*.graphml'):\n",
+    "    name = file_path.stem\n",
+    "    G = nx.read_graphml(file_path)\n",
+    "    xferfiles_c[name] = G\n",
+    "\n",
+    "# loading new attrs from api\n",
+    "years = range(2021, 2026)\n",
+    "config = cfbd.Configuration(access_token=API_KEY)\n",
+    "with cfbd.ApiClient(config) as api_client:\n",
+    "    xfer_api = cfbd.PlayersApi(api_client)\n",
+    "\n",
+    "for year in years:\n",
+    "    print(f\"Fetching transfer portal data for {year}...\")\n",
+    "    try:\n",
+    "        xfers = xfer_api.get_transfer_portal(year=year)\n",
+    "        for xfer in xfers:\n",
+    "            player_id = getattr(xfer, 'id', None)\n",
+    "            if player_id is None:\n",
+    "                continue\n",
+    "            # Find the corresponding graph and edge\n",
+    "            for name, graph in xferfiles_c.items():\n",
+    "                for s, t, key, data in graph.edges(keys=True, data=True):\n",
+    "                    players_str = data.get('players', '')\n",
+    "                    if players_str:\n",
+    "                        player_list = [p.strip() for p in players_str.split('|')]\n",
+    "                        if player_id in player_list:\n",
+    "                            # Add id attribute\n",
+    "                            data['id'] = str(player_id)\n",
+    "    except cfbd.ApiException as e:\n",
+    "        print(f\"  Exception when calling PlayersApi->get_transfer_portal for {year}: {e}\")\n",
+    "\n",
+    "# save\n",
+    "output_path_id = Path(r\"C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\with_ids\")\n",
+    "output_path_id.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name, graph in xferfiles_c.items():\n",
+    "    output_file = output_path_id / f\"{name}.graphml\"\n",
+    "    nx.write_graphml(graph, output_file)\n",
+    "    print(f\"Saved graph with IDs: {output_file}\")"
    ]
   },
   {
