checkpoint before combining npv functions

--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "09cc2da9",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2cffa2b5",
    "metadata": {},
    "outputs": [
@@ -232,6 +232,7 @@
     "import numpy as np\n",
     "from pathlib import Path\n",
     "from collections import defaultdict\n",
+    "import uuid\n",
     "\n",
     "# Load transfer portal graphs\n",
     "xferpath = Path(r\"C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\raw\")\n",
@@ -470,7 +471,9 @@
     "                        return v\n",
     "                return ''\n",
     "            \n",
+    "            edge_unique_id = str(uuid.uuid4())\n",
     "            final_data = {\n",
+    "                'id': edge_unique_id,\n",
     "                'players': player_name,\n",
     "                'positions': get_best_value('position'),\n",
     "                'dates': get_best_value('date'),\n",
@@ -481,7 +484,7 @@
     "            }\n",
     "            \n",
     "            # Add edge (MultiDiGraph automatically handles multiple edges)\n",
-    "            G_new.add_edge(source, target, **final_data)\n",
+    "            G_new.add_edge(source, target, key=edge_unique_id, **final_data)\n",
     "            edges_after += 1\n",
     "    \n",
     "    print(f\"  Edges: {edges_before} → {edges_after} (+{edges_after - edges_before})\")\n",
