finished with cleaning and metric calculations

--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2cffa2b5",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
     "from collections import defaultdict\n",
     "import uuid\n",
     "\n",
-    "# Load transfer portal graphs\n",
+    "# load transfer portal graphs\n",
     "xferpath = Path(r\"C:\\Users\\User\\Documents\\cfb project\\data\\transferportal\\raw\")\n",
     "xferfiles = {}\n",
     "\n",
@@ -245,9 +245,7 @@
     "\n",
     "print(f\"Loaded {len(xferfiles)} transfer portal files\\n\")\n",
     "\n",
-    "# ============================================\n",
-    "# STEP 1: ANALYZE CURRENT STATE\n",
-    "# ============================================\n",
+    "# 1. ANALYZE CURRENT STATE\n",
     "\n",
     "print(\"=\"*60)\n",
     "print(\"ANALYZING CURRENT DATA STATE\")\n",
